--- a/app/components/body-components/info-box.html
+++ b/app/components/body-components/info-box.html
@@ -32,16 +32,16 @@
   </div>
   <div class="body-box-b-2">
   <div class="collapse-wrapper"> 
-      <button class="collapse-button" href="" onclick="collapse()"><span>ADMISSION</span></button>
+      <button class="collapse-button" href="" onclick="collapse()" onkeyup="collapse()"><span>ADMISSION</span></button>
   </div>
-    <div id="butten-collapse" class="collapse-button-txt" onclick="notCollapse ()">
+    <div id="butten-collapse" class="collapse-button-txt" onclick="notCollapse ()" onkeyup="notCollapse ()">
       <small class="collapse-x"><i>X</i></small>
       <small><i>The entrance is free for all. </i></small><br />
     </div>
     <div class="collapse-wrapper">
-    <button class="collapse-button" href="" onclick="collapseX()"><span>GUIDED TOURS</span></button>
+    <button class="collapse-button" href="" onclick="collapseX()" onkeyup="collapseX()"><span>GUIDED TOURS</span></button>
     </div>
-    <div id="butten-collapse-x" class="collapse-button-txt" onclick="notCollapseX()">
+    <div id="butten-collapse-x" class="collapse-button-txt" onclick="notCollapseX()" onkeyup="notCollapseX()">
       <small class="collapse-x"><i>X</i></small>
       <small
         ><i
@@ -51,9 +51,9 @@
       ><br />
     </div>
     <div class="collapse-wrapper">
-    <button class="collapse-button" href="" onclick="collapseX1()"><span>ORGANISE A GUIDED TOUR</span></button>
+    <button class="collapse-button" href="" onclick="collapseX1()" onkeyup="collapseX1()"><span>ORGANISE A GUIDED TOUR</span></button>
     </div>
-    <div id="butten-collapse-x-1" class="collapse-button-txt" onclick="notCollapseX1()">
+    <div id="butten-collapse-x-1" class="collapse-button-txt" onclick="notCollapseX1()" onkeyup="notCollapseX1()">
       <small class="collapse-x-1"><i>X</i></small>
       <small
         ><i
@@ -63,9 +63,9 @@
       ><br />
     </div>
     <div class="collapse-wrapper">
-    <button class="collapse-button" href="" onclick="collapseX2()"><span>ACCESSIBILITY</span></button>
+    <button class="collapse-button" href="" onclick="collapseX2()" onkeyup="collapseX2()"><span>ACCESSIBILITY</span></button>
     </div>
-    <div id="butten-collapse-x-2" class="collapse-button-txt" onclick="notCollapseX2()">
+    <div id="butten-collapse-x-2" class="collapse-button-txt" onclick="notCollapseX2()" onkeyup="notCollapseX2()">
       <small class="collapse-x-2"><i>X</i></small>
       <small
         ><i
