accessibility issues, Adding fix/indicating problems for older users.

--- a/app/components/body-components/testimonial.html
+++ b/app/components/body-components/testimonial.html
@@ -18,33 +18,28 @@
     </p>
   </div>
   <div class="testimonial-box-1">
-    <button class="testimonial-button" aria-hidden="true">
-    <a href="/exhibition.html#section-box1">
+    <a  class="testimonial-button" href="/exhibition.html#section-box1">
       Cosmology
-    </a></button>
+    </a>
   </div>
   <div class="testimonial-box-2">
-    <button class="testimonial-button" aria-hidden="true">
-    <a href="/exhibition.html#section-box2"> 
+    <a class="testimonial-button" href="/exhibition.html#section-box2"> 
       Evolution
-    </a></button>
+    </a>
   </div>
   <div class="testimonial-box-3">
-    <button class="testimonial-button" aria-hidden="true">
-    <a href="/exhibition.html#section-box3">
+    <a class="testimonial-button" href="/exhibition.html#section-box3">
       Robotics and AI
-    </a></button>
+    </a>
   </div>
   <div class="testimonial-box-4">
-    <button class="testimonial-button" aria-hidden="true">
-    <a href="/exhibition.html#section-box4">
+    <a class="testimonial-button" href="/exhibition.html#section-box4">
       Biology & Medicine
-    </a></button>
+    </a>
   </div>
   <div class="testimonial-box-5">
-    <button class="testimonial-button" aria-hidden="true">
-    <a href="/exhibition.html#section-box5">
+    <a class="testimonial-button" href="/exhibition.html#section-box5">
       Ecology
-    </a></button>
+    </a>
   </div>
 </div>
