--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -463,6 +463,8 @@ h3 {
 .body-box-b-3 {
   grid-area: body-box-b-3;
   box-shadow: 0 0 2em -19px; }
+  .body-box-b-3 iframe {
+    border: 0px; }
 
 .info-box-info-grid-container {
   grid-template-areas: "body-box1-tital" "body-box2-info-text"; }
@@ -737,15 +739,18 @@ h3 {
   .testimonial-box-4 .testimonial-button,
   .testimonial-box-5 .testimonial-button {
     background-color: #18a0fb;
+    color: #fff;
     border: none;
     border-radius: 5px;
     font-size: 20px;
+    font-weight: 400;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
     position: relative;
     box-shadow: 0px 20px 54px 5px #5098c959;
     cursor: pointer;
-    width: 100%; }
+    width: 100%;
+    display: block; }
   .testimonial-box-1 :hover,
   .testimonial-box-2 :hover,
   .testimonial-box-3 :hover,
@@ -755,9 +760,6 @@ h3 {
     transition: 1s;
     position: relative;
     box-shadow: 0px 20px 54px 5px #686868; }
-
-.testimonial-button a {
-  color: #fff; }
 
 .signup-grid-container {
   grid-template-areas: "signup-box-1 signup-box-2"; }
