accessibility issues, Adding fix/indicating problems for older users.

--- a/app/components/body-components/info-box.html
+++ b/app/components/body-components/info-box.html
@@ -34,14 +34,14 @@
   <div class="collapse-wrapper"> 
       <button class="collapse-button" href="" onclick="collapse()" onkeyup="collapse()"><span>ADMISSION</span></button>
   </div>
-    <div id="butten-collapse" class="collapse-button-txt" onclick="notCollapse ()" onkeyup="notCollapse ()">
+    <a id="butten-collapse" class="collapse-button-txt" onclick="notCollapse ()" onkeyup="notCollapse ()">
       <small class="collapse-x"><i>X</i></small>
       <small><i>The entrance is free for all. </i></small><br />
-    </div>
+    </a>
     <div class="collapse-wrapper">
     <button class="collapse-button" href="" onclick="collapseX()" onkeyup="collapseX()"><span>GUIDED TOURS</span></button>
     </div>
-    <div id="butten-collapse-x" class="collapse-button-txt" onclick="notCollapseX()" onkeyup="notCollapseX()">
+    <a id="butten-collapse-x" class="collapse-button-txt" onclick="notCollapseX()" onkeyup="notCollapseX()">
       <small class="collapse-x"><i>X</i></small>
       <small
         ><i
@@ -49,11 +49,11 @@
           person and include a handy printed guide of the museum.</i
         ></small
       ><br />
-    </div>
+    </a>
     <div class="collapse-wrapper">
     <button class="collapse-button" href="" onclick="collapseX1()" onkeyup="collapseX1()"><span>ORGANISE A GUIDED TOUR</span></button>
     </div>
-    <div id="butten-collapse-x-1" class="collapse-button-txt" onclick="notCollapseX1()" onkeyup="notCollapseX1()">
+    <a id="butten-collapse-x-1" class="collapse-button-txt" onclick="notCollapseX1()" onkeyup="notCollapseX1()">
       <small class="collapse-x-1"><i>X</i></small>
       <small
         ><i
@@ -61,11 +61,11 @@
           contact us to arrange the tour.</i
         ></small
       ><br />
-    </div>
+    </a>
     <div class="collapse-wrapper">
     <button class="collapse-button" href="" onclick="collapseX2()" onkeyup="collapseX2()"><span>ACCESSIBILITY</span></button>
     </div>
-    <div id="butten-collapse-x-2" class="collapse-button-txt" onclick="notCollapseX2()" onkeyup="notCollapseX2()">
+    <a id="butten-collapse-x-2" class="collapse-button-txt" onclick="notCollapseX2()" onkeyup="notCollapseX2()">
       <small class="collapse-x-2"><i>X</i></small>
       <small
         ><i
@@ -73,7 +73,7 @@
           display signs for the visually impaired.</i
         ></small
       ><br />
-    </div>
+    </a>
   </div>
   <div class="body-box-b-3">
     <iframe
