--- a/app/src/scss/modules/_signup.scss
+++ b/app/src/scss/modules/_signup.scss
@@ -25,7 +25,8 @@
 
 .test-bottum {
   margin-top: 15px;
-  background-color: #18a0fb;
+  //background-color: #18a0fb;
+  background-color: #1072b4;
   border: none;
   border-radius: 5px;
   font-size: 20px;
