--- a/app/src/scss/modules/_testimonal.scss
+++ b/app/src/scss/modules/_testimonal.scss
@@ -62,7 +62,8 @@
       margin-top: 80px;
     }
     .testimonial-button  {
-        background-color: #18a0fb;
+        //background-color: #18a0fb;
+        background-color: #1072b4;
         color: #fff;
         border: none;
         border-radius: 5px;
