--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -401,15 +401,18 @@ h3 {
 .hero-box-1 {
   grid-area: hero-box-1; }
 
+.hero-baner {
+  font-weight: 400; }
+
 .hero-box-2 {
   grid-area: hero-box-2;
   display: flex;
   position: absolute;
-  background-color: #18a0fbc2;
+  background-color: #1072b4;
   top: 355px;
   width: 100%;
   padding: 20px 0px 20px 0px; }
-  .hero-box-2 h3 {
+  .hero-box-2 p {
     color: #fff;
     font-size: 19px;
     overflow: hidden;
@@ -418,10 +421,10 @@ h3 {
     animation: test 2.4s steps(29, end);
     text-align: center; }
     @media only screen and (min-width: 1024px) {
-      .hero-box-2 h3 {
+      .hero-box-2 p {
         font-size: 70px; } }
     @media (prefers-reduced-motion) {
-      .hero-box-2 h3 {
+      .hero-box-2 p {
         animation: test 0; } }
   @media only screen and (min-width: 1024px) {
     .hero-box-2 {
@@ -483,7 +486,7 @@ h3 {
   display: flex;
   grid-area: body-box2-info-text;
   color: #fff;
-  background-color: #18a0fb;
+  background-color: #1072b4;
   padding-top: 10px; }
   @media only screen and (min-width: 1024px) {
     .body-box2-info-text {
@@ -520,7 +523,7 @@ h3 {
   position: relative;
   display: none;
   padding: 1rem;
-  background-color: #18a0fb;
+  background-color: #1072b4;
   color: #fff;
   z-index: 4;
   cursor: pointer;
@@ -562,7 +565,7 @@ h3 {
   width: 100%;
   height: 300px;
   content: "";
-  background-color: #18a0fb;
+  background-color: #1072b4;
   position: absolute; }
 
 .collapse-wrapper:hover .collapse-button:after {
@@ -741,7 +744,7 @@ h3 {
   .testimonial-box-3 .testimonial-button,
   .testimonial-box-4 .testimonial-button,
   .testimonial-box-5 .testimonial-button {
-    background-color: #18a0fb;
+    background-color: #1072b4;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -786,7 +789,7 @@ h3 {
 
 .test-bottum {
   margin-top: 15px;
-  background-color: #18a0fb;
+  background-color: #1072b4;
   border: none;
   border-radius: 5px;
   font-size: 20px;
@@ -1339,7 +1342,7 @@ h3 {
   grid-area: community-form-box-4; }
   .community-form-box-4 input[type=submit] {
     width: 100%;
-    background-color: #18a0fbc2;
+    background-color: #1072b4;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -1411,7 +1414,7 @@ input[type=text], select, textarea {
   grid-area: community-form-box-4; }
   .community-form-box-4 input[type=submit] {
     width: 100%;
-    background-color: #18a0fbc2;
+    background-color: #1072b4;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -1428,7 +1431,7 @@ input[type=text], select, textarea {
         right: calc(10% + 30px);
         z-index: 11; } }
   .community-form-box-4 input[type=submit]:hover {
-    background-color: #096fb6b5; }
+    background-color: green; }
 
 .community-form-box, .community-form-box-1, .community-form-box-2, .community-form-box-3, .community-form-box-4 {
   width: 100%; }
