--- a/app/src/scss/modules/_info-box.scss
+++ b/app/src/scss/modules/_info-box.scss
@@ -41,7 +41,8 @@
   display: flex;
   grid-area: body-box2-info-text;
   color: #fff;
-  background-color: #18a0fb;
+  //background-color: #18a0fb;
+  background-color: #1072b4;
   padding-top: 10px;
   @media #{$screen__l} {
     padding-top: 0;
@@ -80,7 +81,8 @@
   position: relative;
   display: none;
   padding: 1rem;
-  background-color: #18a0fb;
+  //background-color: #18a0fb;
+  background-color: #1072b4;
   color: #fff;
   z-index: 4;
   cursor: pointer;
@@ -128,7 +130,8 @@
   width: 100%;
   height: 300px;
   content: "";
-  background-color: #18a0fb;
+  //background-color: #18a0fb;
+  background-color: #1072b4;
   position: absolute;
 }
 
