--- a/app/src/scss/modules/_internships-form-1.scss
+++ b/app/src/scss/modules/_internships-form-1.scss
@@ -35,7 +35,8 @@
     grid-area: community-form-box-4;
     input[type=submit] {
       width: 100%;
-      background-color: #18a0fbc2;
+      background-color: #1072b4;
+      //background-color: #18a0fbc2;
       color: white;
       padding: 12px 20px;
       border: none;
@@ -54,7 +55,8 @@
     }
     
     input[type=submit]:hover {
-      background-color: #096fb6b5;
+      //background-color: #096fb6b5;
+      background-color: green;
     } 
   }
 
