--- a/app/src/scss/modules/_volunteer-form.scss
+++ b/app/src/scss/modules/_volunteer-form.scss
@@ -34,7 +34,8 @@
     grid-area: community-form-box-4;
     input[type=submit] {
       width: 100%;
-      background-color: #18a0fbc2;
+      //background-color: #18a0fbc2;
+      background-color: #1072b4;
       color: white;
       padding: 12px 20px;
       border: none;
