accessibility issues, Adding fix/indicating problems for older users.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1297,7 +1297,7 @@ h3 {
   top: 5px;
   z-index: 11;
   right: 5px;
-  background: #ff708e;
+  background-color: #0b3d5e;
   width: 50px;
   border-radius: 100%;
   padding: 5px;
