--- a/app/components/shops/shop.html
+++ b/app/components/shops/shop.html
@@ -4,7 +4,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img" alt="produckt img"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img" alt="coming soon img" src="../../media/coming-soon.png">
+          <img class="product-box-img" alt="coming soon img" src="../../media/coming-soon-1.png">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
@@ -26,7 +26,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-2"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2" alt="coming soonimg" src="../../media/coming-soon.png">
+          <img class="product-box-img-2" alt="coming soonimg" src="../../media/coming-soon-1.png">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
@@ -48,7 +48,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-3"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-3" alt="coming soon img" src="../../media/coming-soon.png">
+          <img class="product-box-img-3" alt="coming soon img" src="../../media/coming-soon-1.png">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
@@ -70,7 +70,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-4"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-4" alt="coming soon img" src="../../media/coming-soon.png">
+          <img class="product-box-img-4" alt="coming soon img" src="../../media/coming-soon-1.png">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
@@ -92,7 +92,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-5"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-5" alt="coming soon img" src="../../media/coming-soon.png">
+          <img class="product-box-img-5" alt="coming soon img" src="../../media/coming-soon-1.png">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
@@ -114,7 +114,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-6"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-6" alt="coming soon img" src="../../media/coming-soon.png">
+          <img class="product-box-img-6" alt="coming soon img" src="../../media/coming-soon-1.png">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
@@ -136,7 +136,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-7"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-7" alt="coming soon img" src="../../media/coming-soon.png">
+          <img class="product-box-img-7" alt="coming soon img" src="../../media/coming-soon-1.png">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
@@ -158,7 +158,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-8"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-8" alt="coming soon img" src="../../media/coming-soon.png">
+          <img class="product-box-img-8" alt="coming soon img" src="../../media/coming-soon-1.png">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
@@ -180,7 +180,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-9"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-9" alt="coming soon img" src="../../media/coming-soon.png">
+          <img class="product-box-img-9" alt="coming soon img" src="../../media/coming-soon-1.png">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
