--- a/app/components/shops/shop-2.html
+++ b/app/components/shops/shop-2.html
@@ -4,7 +4,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-2-1"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-1" alt="produckt img" src="../../media/celso.jpg"> <!--class="product-box-img-2-1"-->
+          <img class="product-box-img-2-1" alt="produckt img" src="../../media/celso-1.jpg"> <!--class="product-box-img-2-1"-->
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
@@ -26,7 +26,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-2-2"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-2" alt="produckt img" src="../../media/exhibition.jpg">
+          <img class="product-box-img-2-2" alt="produckt img" src="../../media/exhibition-1.jpg">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
@@ -48,7 +48,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-2-3"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-3" alt="produckt img" src="../../media/scientific.jpg">
+          <img class="product-box-img-2-3" alt="produckt img" src="../../media/scientific-1.jpg">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
@@ -70,7 +70,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-2-4"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-4" alt="produckt img" src="../../media/heart.jpg">
+          <img class="product-box-img-2-4" alt="produckt img" src="../../media/heart-1.jpg">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
@@ -92,7 +92,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-2-5"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-5" alt="produckt img" src="../../media/mammoth.jpg">
+          <img class="product-box-img-2-5" alt="produckt img" src="../../media/mammoth-1.jpg">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
@@ -114,7 +114,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-2-6"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-6" alt="produckt img" src="../../media/william-bout.jpg">
+          <img class="product-box-img-2-6" alt="produckt img" src="../../media/william-bout-1.jpg">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
@@ -136,7 +136,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-2-7"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-7" alt="produckt img" src="../../media/scott-webb.jpg">
+          <img class="product-box-img-2-7" alt="produckt img" src="../../media/scott-webb-1.jpg">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
@@ -158,7 +158,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-2-8"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-8" alt="produckt img" src="../../media/skeleton.jpg">
+          <img class="product-box-img-2-8" alt="produckt img" src="../../media/skeleton-1.jpg">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
@@ -180,7 +180,7 @@
       <div class="product-box-layer">
         <!--<div class="product-box-front-layer product-box-img-2-9"></div>-->
         <div class="product-box-front-layer">
-          <img class="product-box-img-2-9" alt="produckt img" src="../../media/samuel-zeller.jpg">
+          <img class="product-box-img-2-9" alt="produckt img" src="../../media/samuel-zeller-1.jpg">
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
