--- a/app/src/scss/modules/_shop-2.scss
+++ b/app/src/scss/modules/_shop-2.scss
@@ -47,7 +47,8 @@
   top: 5px;
   z-index: 11;
   right: 5px;
-  background: #ff708e;
+  //background: #ff708e;
+  background-color: #0b3d5e;
   width: 50px;
   border-radius: 100%;
   padding: 5px;
