--- a/app/components/body-components/info-box.html
+++ b/app/components/body-components/info-box.html
@@ -31,17 +31,31 @@
     </div>
   </div>
   <div class="body-box-b-2">
-  <div class="collapse-wrapper"> 
-      <button class="collapse-button" href="" onclick="collapse()" onkeyup="collapse()"><span>ADMISSION</span></button>
-  </div>
-    <a id="butten-collapse" class="collapse-button-txt" onclick="notCollapse ()" onkeyup="notCollapse ()">
+    <div class="collapse-wrapper">
+      <button class="collapse-button" href="" onclick="collapse()" onkeyup="collapse()">
+        <span>ADMISSION</span>
+      </button>
+    </div>
+    <a
+      id="butten-collapse"
+      class="collapse-button-txt"
+      onclick="notCollapse ()"
+      onkeyup="notCollapse ()"
+    >
       <small class="collapse-x"><i>X</i></small>
       <small><i>The entrance is free for all. </i></small><br />
     </a>
     <div class="collapse-wrapper">
-    <button class="collapse-button" href="" onclick="collapseX()" onkeyup="collapseX()"><span>GUIDED TOURS</span></button>
+      <button class="collapse-button" href="" onclick="collapseX()" onkeyup="collapseX()">
+        <span>GUIDED TOURS</span>
+      </button>
     </div>
-    <a id="butten-collapse-x" class="collapse-button-txt" onclick="notCollapseX()" onkeyup="notCollapseX()">
+    <a
+      id="butten-collapse-x"
+      class="collapse-button-txt"
+      onclick="notCollapseX()"
+      onkeyup="notCollapseX()"
+    >
       <small class="collapse-x"><i>X</i></small>
       <small
         ><i
@@ -51,9 +65,16 @@
       ><br />
     </a>
     <div class="collapse-wrapper">
-    <button class="collapse-button" href="" onclick="collapseX1()" onkeyup="collapseX1()"><span>ORGANISE A GUIDED TOUR</span></button>
+      <button class="collapse-button" href="" onclick="collapseX1()" onkeyup="collapseX1()">
+        <span>ORGANISE A GUIDED TOUR</span>
+      </button>
     </div>
-    <a id="butten-collapse-x-1" class="collapse-button-txt" onclick="notCollapseX1()" onkeyup="notCollapseX1()">
+    <a
+      id="butten-collapse-x-1"
+      class="collapse-button-txt"
+      onclick="notCollapseX1()"
+      onkeyup="notCollapseX1()"
+    >
       <small class="collapse-x-1"><i>X</i></small>
       <small
         ><i
@@ -63,9 +84,16 @@
       ><br />
     </a>
     <div class="collapse-wrapper">
-    <button class="collapse-button" href="" onclick="collapseX2()" onkeyup="collapseX2()"><span>ACCESSIBILITY</span></button>
+      <button class="collapse-button" href="" onclick="collapseX2()" onkeyup="collapseX2()">
+        <span>ACCESSIBILITY</span>
+      </button>
     </div>
-    <a id="butten-collapse-x-2" class="collapse-button-txt" onclick="notCollapseX2()" onkeyup="notCollapseX2()">
+    <a
+      id="butten-collapse-x-2"
+      class="collapse-button-txt"
+      onclick="notCollapseX2()"
+      onkeyup="notCollapseX2()"
+    >
       <small class="collapse-x-2"><i>X</i></small>
       <small
         ><i
@@ -81,10 +109,9 @@
       width="100%"
       height="100%"
       id="gmap_canvas"
-      src="https://maps.google.com/maps?q=Kjels%C3%A5sveien%20143%200491%20Oslo&t=&z=17&ie=UTF8&iwloc=&output=embed"
-      scrolling="no"
-      marginheight="0"
-      marginwidth="0"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.9353255600452!2d10.78052761609069!3d59.96639628188628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464171e7ed1e997b%3A0xdea4421d7d285a7b!2sKjels%C3%A5sveien%20143%2C%200491%20Oslo!5e0!3m2!1sno!2sno!4v1627983156910!5m2!1sno!2sno"
+      allowfullscreen=""
+      loading="lazy"
     ></iframe>
   </div>
 </div>
