accessibility issues, Adding fix/indicating problems for older users.

--- a/app/components/body-components/signup.html
+++ b/app/components/body-components/signup.html
@@ -12,14 +12,19 @@
       Department and they will be able to assist you.
     </p>
   </div>
-  <div class="signup-box-2 grid-flex">
-    <button class="test-bottum">
-      <a href="/community.html">
-        Volunteer
-      </a></button>
-      <button class="test-bottum">
-      <a href="/community-1.html">
-        Internships
-      </a></button>
+  <div class="signup-box-2"><!-- grid-flex -->
+    <!--<button class="test-bottum">-->
+      <div class="grid-flex ">
+        <a  class="test-bottum" href="/community.html">
+          Volunteer
+        </a>
+      <!--</button>-->
+      <!--<button class="test-bottum">-->
+        
+          <a class="test-bottum" href="/community-1.html">
+            Internships
+          </a>
+        <!--</button>-->
+      </div>
   </div>
 </div>
