--- a/app/src/scss/modules/_signup.scss
+++ b/app/src/scss/modules/_signup.scss
@@ -10,7 +10,7 @@
   grid-area: signup-box-2;
   @media #{$screen__l} {
     a {
-      margin: 10px;
+      //margin: 10px;
     }
   }
 }
@@ -24,18 +24,21 @@
 }
 
 .test-bottum {
-  margin-top: 15px;
+  margin: 5px;
   //background-color: #18a0fb;
   background-color: #1072b4;
+  text-align: center;
   border: none;
   border-radius: 5px;
   font-size: 20px;
-  padding: 10px 20px 10px 20px;
+  font-weight: 400;
+  padding: 15px 20px 15px 20px;
   text-decoration: none;
   color: #fff;
   position: relative;
   box-shadow: 0px 20px 54px 5px #5098c959;
   cursor: pointer;
+  display: block;
   width: 100%;
 }
 .test-bottum:hover {
@@ -46,7 +49,7 @@
 }
 @media #{$screen__l} {
   .test-bottum {
-    margin: 130px 10px 0px 0px;
+    top: 95px;
   }
 }
 
