--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1466,5 +1466,7 @@ input[type=text], select, textarea {
 .help-box {
   grid-area: help-box;
   width: 70%;
-  text-align: center;
-  padding: 50px 50px; }
+  text-align: center; }
+  @media only screen and (min-width: 1024px) {
+    .help-box {
+      padding: 50px 50px; } }
