--- a/app/components/body-components/info-box.html
+++ b/app/components/body-components/info-box.html
@@ -36,7 +36,7 @@
         <span>ADMISSION</span>
       </button>
     </div>
-    <a
+    <div
       id="butten-collapse"
       class="collapse-button-txt"
       onclick="notCollapse ()"
@@ -44,13 +44,13 @@
     >
       <small class="collapse-x"><i>X</i></small>
       <small><i>The entrance is free for all. </i></small><br />
-    </a>
+  </div>
     <div class="collapse-wrapper">
       <button class="collapse-button" href="" onclick="collapseX()" onkeyup="collapseX()">
         <span>GUIDED TOURS</span>
       </button>
     </div>
-    <a
+    <div
       id="butten-collapse-x"
       class="collapse-button-txt"
       onclick="notCollapseX()"
@@ -60,16 +60,17 @@
       <small
         ><i
           >There are guided tours of the museum that leave every hour. These tours are 70 NOK per
-          person and include a handy printed guide of the museum.</i
+          person and include a handy printed guide of the museum.
+          </i
         ></small
       ><br />
-    </a>
+  </div>
     <div class="collapse-wrapper">
       <button class="collapse-button" href="" onclick="collapseX1()" onkeyup="collapseX1()">
         <span>ORGANISE A GUIDED TOUR</span>
       </button>
     </div>
-    <a
+    <div
       id="butten-collapse-x-1"
       class="collapse-button-txt"
       onclick="notCollapseX1()"
@@ -79,16 +80,18 @@
       <small
         ><i
           >If you would like to organise a guided tour for your group of 6 or more people, please
-          contact us to arrange the tour.</i
-        ></small
-      ><br />
-    </a>
+          contact us to arrange the tour.
+            <a class="mail-button" href="mailto:email@example.com?cc=Suportmail@example.com,&subject=ORGANISE A GUIDED TOUR&body=Hi I would like to organise a guided tour for your group of 20 people! Is this possible, Monday the 19.09.23?">Contact Us</a>
+        </i>
+        </small>
+        <br />
+      </div>
     <div class="collapse-wrapper">
       <button class="collapse-button" href="" onclick="collapseX2()" onkeyup="collapseX2()">
         <span>ACCESSIBILITY</span>
       </button>
     </div>
-    <a
+    <div
       id="butten-collapse-x-2"
       class="collapse-button-txt"
       onclick="notCollapseX2()"
@@ -101,7 +104,7 @@
           display signs for the visually impaired.</i
         ></small
       ><br />
-    </a>
+  </div>
   </div>
   <div class="body-box-b-3">
     <iframe
