--- a/app/components/header.html
+++ b/app/components/header.html
@@ -4,7 +4,7 @@
         <div class="box-1">
           <a href="/index.html">
             <img
-              src="../media/logo.png"
+              src="../media/logo-5.webp"
               alt="Community Science Museum logo, a C"
               class="nav-logo"
             />
