--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -310,7 +310,7 @@ h3 {
   color: #000; }
 
 .nav-logo {
-  width: 3rem;
+  width: auto;
   height: 3rem; }
 
 .txthederlogo:active,
@@ -433,7 +433,7 @@ h3 {
 .baner-img {
   width: 100%;
   height: 500px;
-  background-image: url(../../media/scott-webb.jpg);
+  background-image: url(../../media/scott-webb.webp);
   object-fit: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -572,6 +572,12 @@ h3 {
   width: 250px;
   height: 100px;
   background-color: #0b3d5e; }
+
+.mail-button {
+  color: #000;
+  background-color: #fff;
+  padding: 3px 8px 3px 8px;
+  border-radius: 10px; }
 
 .explore-for-kids-grid-container {
   grid-template-areas: "explore-for-kids-box-1 explore-for-kids-box-2"; }
@@ -1202,13 +1208,14 @@ h3 {
 
 .product-box {
   height: 250px;
+  height: auto;
   perspective: 1000px;
   margin-bottom: 5px; }
 
 .product-box-layer {
+  height: 250px;
   position: relative;
   width: 100%;
-  text-align: center;
   transition: transform 0.4s;
   transform-style: preserve-3d; }
 
@@ -1235,6 +1242,7 @@ h3 {
   overflow: hidden; }
 
 .product-box-back-layer {
+  text-align: center;
   background-color: #18a0fb73;
   padding: 25px 15px;
   height: 250px;
@@ -1258,8 +1266,40 @@ h3 {
 .product-box-img-8,
 .product-box-img-9 {
   width: 100%;
-  height: 250px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
   cursor: pointer; }
+
+.product-box-img {
+  background-image: url(../../media/coming-soon-3.webp); }
+
+.product-box-img-1 {
+  background-image: url(../../media/coming-soon-3.webp); }
+
+.product-box-img-2 {
+  background-image: url(../../media/coming-soon-3.webp); }
+
+.product-box-img-3 {
+  background-image: url(../../media/coming-soon-3.webp); }
+
+.product-box-img-4 {
+  background-image: url(../../media/coming-soon-3.webp); }
+
+.product-box-img-5 {
+  background-image: url(../../media/coming-soon-3.webp); }
+
+.product-box-img-6 {
+  background-image: url(../../media/coming-soon-3.webp); }
+
+.product-box-img-7 {
+  background-image: url(../../media/coming-soon-3.webp); }
+
+.product-box-img-8 {
+  background-image: url(../../media/coming-soon-3.webp); }
+
+.product-box-img-9 {
+  background-image: url(../../media/coming-soon-3.webp); }
 
 .shop-box-2-grid-container {
   grid-template-areas: "shop-box-2-1 shop-box-2-2 shop-box-2-3" "shop-box-2-4 shop-box-2-5 shop-box-2-6" "shop-box-2-7 shop-box-2-8 shop-box-2-9"; }
@@ -1314,8 +1354,46 @@ h3 {
 .product-box-img-2-8,
 .product-box-img-2-9 {
   width: 100%;
-  height: 250px;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
   cursor: pointer; }
+
+.product-box-img-2-1 {
+  background-image: url(../../media/celso-2.webp);
+  background-position: center;
+  background-size: 100% auto; }
+
+.product-box-img-2-2 {
+  background-image: url(../../media/exhibition-2.webp);
+  background-position: center; }
+
+.product-box-img-2-3 {
+  background-image: url(../../media/scientific-2.webp);
+  background-position: center; }
+
+.product-box-img-2-4 {
+  background-image: url(../../media/scott-webb-1.webp);
+  background-position: center; }
+
+.product-box-img-2-5 {
+  background-image: url(../../media/william-bout-2.webp);
+  background-position: center; }
+
+.product-box-img-2-6 {
+  background-image: url(../../media/mammoth-2.webp);
+  background-position: center; }
+
+.product-box-img-2-7 {
+  background-image: url(../../media/heart-2.webp);
+  background-position: center; }
+
+.product-box-img-2-8 {
+  background-image: url(../../media/skeleton-2.webp);
+  background-position: center; }
+
+.product-box-img-2-9 {
+  background-image: url(../../media/samuel-zeller-2.webp);
+  background-position: center; }
 
 .community-form-grid-container {
   display: grid;
