--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -14,7 +14,7 @@
             <div class="footer-logo-box">
                 <a href="/index.html">
                     <img
-                      src="../media/logo.png"
+                      src="../media/logo-5.webp"
                       alt="Community Science Museum logo, a C"
                       class="nav-logo"
                     />
