--- a/app/src/scss/modules/_hero.scss
+++ b/app/src/scss/modules/_hero.scss
@@ -59,7 +59,7 @@
 .baner-img {
   width: 100%;
   height: 500px;
-  background-image: url(../../media/scott-webb.jpg);
+  background-image: url(../../media/scott-webb.webp);
   object-fit: cover;
   //background-attachment: fixed;
   background-repeat: no-repeat;
