--- a/app/src/scss/modules/_info-box.scss
+++ b/app/src/scss/modules/_info-box.scss
@@ -141,3 +141,10 @@
   background-color: #0b3d5e;
 
 }
+
+.mail-button{
+  color: #000;
+  background-color: #fff;
+  padding:3px 8px 3px 8px;
+  border-radius: 10px;
+}
