--- a/app/src/scss/modules/_shop-2.scss
+++ b/app/src/scss/modules/_shop-2.scss
@@ -66,6 +66,49 @@
 .product-box-img-2-8,
 .product-box-img-2-9  {
   width: 100%;
-  height: 250px;
+  //height: 250px;
+  background-repeat: no-repeat;
+  //background-position: initial;
+ // background-position: center;
+  background-size: 100% auto;
+  //padding-bottom: 75%;
   cursor: pointer;
+}
+.product-box-img-2-1 {
+  background-image: url(../../media/celso-2.webp);
+  background-position: center;
+  background-size: 100% auto;
+} 
+.product-box-img-2-2 {
+  background-image: url(../../media/exhibition-2.webp);
+  background-position: center;
+} 
+.product-box-img-2-3 {
+  background-image: url(../../media/scientific-2.webp);
+  background-position: center;
+} 
+.product-box-img-2-4 {
+  background-image: url(../../media/scott-webb-1.webp);
+  background-position: center;
+} 
+
+.product-box-img-2-5 {
+  background-image: url(../../media/william-bout-2.webp);
+  background-position: center;
+}
+.product-box-img-2-6 {
+  background-image: url(../../media/mammoth-2.webp);
+  background-position: center;
+}
+.product-box-img-2-7 {
+  background-image: url(../../media/heart-2.webp);
+  background-position: center;
+}
+.product-box-img-2-8 {
+  background-image: url(../../media/skeleton-2.webp);
+  background-position: center;
+}
+.product-box-img-2-9 {
+  background-image: url(../../media/samuel-zeller-2.webp);
+  background-position: center;
 }
