--- a/app/src/scss/modules/_shop.scss
+++ b/app/src/scss/modules/_shop.scss
@@ -43,14 +43,16 @@
 
 .product-box {
   height: 250px;
+  height: auto;
   perspective: 1000px;
   margin-bottom: 5px;
 }
 
 .product-box-layer {
+  height: 250px;
   position: relative;
   width: 100%;
-  text-align: center;
+  //text-align: center;
   transition: transform 0.4s;
   transform-style: preserve-3d;
 }
@@ -82,6 +84,7 @@
 }
 
 .product-box-back-layer {
+  text-align: center;
   background-color: #18a0fb73;
   padding: 25px 15px;
   height: 250px;
@@ -107,7 +110,40 @@
 .product-box-img-8,
 .product-box-img-9 {
   width: 100%;
-  height: 250px;
+  //height: 250px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
   cursor: pointer;
 }
 
+.product-box-img {
+  background-image: url(../../media/coming-soon-3.webp);
+}
+.product-box-img-1 {
+  background-image: url(../../media/coming-soon-3.webp);
+}
+.product-box-img-2 {
+  background-image: url(../../media/coming-soon-3.webp);
+}
+.product-box-img-3 {
+  background-image: url(../../media/coming-soon-3.webp);
+}
+.product-box-img-4 {
+  background-image: url(../../media/coming-soon-3.webp);
+}
+.product-box-img-5 {
+  background-image: url(../../media/coming-soon-3.webp);
+}
+.product-box-img-6 {
+  background-image: url(../../media/coming-soon-3.webp);
+}
+.product-box-img-7 {
+  background-image: url(../../media/coming-soon-3.webp);
+}
+.product-box-img-8 {
+  background-image: url(../../media/coming-soon-3.webp);
+}
+.product-box-img-9 {
+  background-image: url(../../media/coming-soon-3.webp);
+}
