--- a/app/components/body-components/explore-for-kids.html
+++ b/app/components/body-components/explore-for-kids.html
@@ -3,8 +3,9 @@
   <div class="explore-for-kids-box-2">
     <h2>Explore</h2>
     <!--<h5>-->
-      <small><i>For kids</i></small>
+      <!--<small><i>For kids</i></small>-->
     <!--</h5>-->
+    <p class="fs-italic">For kids</p>
     <p>
       Are you a young person looking to learn more about science? Come on down to our museum,
       there’s plenty to see and do. You can learn about Newtonian physics from our bumper swing, or
