--- a/app/components/body-components/explore-for-researchers.html
+++ b/app/components/body-components/explore-for-researchers.html
@@ -3,8 +3,9 @@
   <div class="explore-for-researchers-box-2">
     <h2>Explore</h2>
     <!--<h5>-->
-      <small><i>Researchers</i></small>
+      <!--<small><i>Researchers</i></small>-->
     <!--</h5>-->
+    <p class="fs-italic">Researchers</p>
     <p>
       Are you looking to get involved with our team of researchers and academics? Our museum offers
       various ways for you to use our resources and contribute towards them. We have online records,
