--- a/app/components/body-components/info-box.html
+++ b/app/components/body-components/info-box.html
@@ -2,7 +2,8 @@
   <div class="bady-box-b-1">
     <div class="info-box-info-grid-container">
       <div class="body-box1-tital">
-        <small><i>HOURS</i></small>
+        <!--<small><i>HOURS</i></small>-->
+        <p class="small">HOURS</p>
       </div>
       <div class="body-box2-info-text">
         <div class="body-box2-info-day">
@@ -42,8 +43,11 @@
       onclick="notCollapse ()"
       onkeyup="notCollapse ()"
     >
-      <small class="collapse-x"><i>X</i></small>
-      <small><i>The entrance is free for all. </i></small><br />
+      <!--<small class="collapse-x"><i>X</i></small>-->
+      <p class="collapse-x">x</p>
+      <!--<small><i>The entrance is free for all. </i></small>-->
+      <p class="small-btxt">The entrance is free for all.</p>
+      <br />
   </div>
     <div class="collapse-wrapper">
       <button class="collapse-button" href="" onclick="collapseX()" onkeyup="collapseX()">
@@ -56,14 +60,18 @@
       onclick="notCollapseX()"
       onkeyup="notCollapseX()"
     >
-      <small class="collapse-x"><i>X</i></small>
-      <small
+      <!--<small class="collapse-x"><i>X</i></small>-->
+      <p class="collapse-x">x</p>
+      <!--<small
         ><i
           >There are guided tours of the museum that leave every hour. These tours are 70 NOK per
           person and include a handy printed guide of the museum.
           </i
         ></small
-      ><br />
+      >-->
+      <p class="small-btxt">There are guided tours of the museum that leave every hour. These tours are 70 NOK per
+        person and include a handy printed guide of the museum.</p>
+      <br />
   </div>
     <div class="collapse-wrapper">
       <button class="collapse-button" href="" onclick="collapseX1()" onkeyup="collapseX1()">
@@ -76,14 +84,18 @@
       onclick="notCollapseX1()"
       onkeyup="notCollapseX1()"
     >
-      <small class="collapse-x-1"><i>X</i></small>
-      <small
+      <!--<small class="collapse-x-1"><i>X</i></small>-->
+      <p class="collapse-x-1">x</p>
+      <!--<small
         ><i
           >If you would like to organise a guided tour for your group of 6 or more people, please
           contact us to arrange the tour.
-            <a class="mail-button" href="mailto:email@example.com?cc=Suportmail@example.com,&subject=ORGANISE A GUIDED TOUR&body=Hi I would like to organise a guided tour for your group of 20 people! Is this possible, Monday the 19.09.23?">Contact Us</a>
+            <a class="mail-button" href="mailto:CSM@example.com?cc=Suportmail@example.com,&subject=ORGANISE A GUIDED TOUR&body=Hi I would like to organise a guided tour for your group of 20 people! Is this possible, Monday the 19.09.23?">Contact Us</a>
         </i>
-        </small>
+        </small>-->
+        <p class="small-btxt">If you would like to organise a guided tour for your group of 6 or more people, please
+          contact us to arrange the tour.
+            <a class="mail-button" href="mailto:CSM@example.com?cc=Suportmail@example.com,&subject=ORGANISE A GUIDED TOUR&body=Hi I would like to organise a guided tour for your group of 20 people! Is this possible, Monday the 19.09.23?">Contact Us</a></p>
         <br />
       </div>
     <div class="collapse-wrapper">
@@ -97,13 +109,17 @@
       onclick="notCollapseX2()"
       onkeyup="notCollapseX2()"
     >
-      <small class="collapse-x-2"><i>X</i></small>
-      <small
+      <!--<small class="collapse-x-2"><i>X</i></small>-->
+      <p class="collapse-x-2">x</p>
+      <!--<small
         ><i
           >The museum has wheelchair accessibility ramps. It also has audio guides and braille
           display signs for the visually impaired.</i
         ></small
-      ><br />
+      >-->
+      <p class="small-btxt">The museum has wheelchair accessibility ramps. It also has audio guides and braille
+        display signs for the visually impaired.</p>
+      <br />
   </div>
   </div>
   <div class="body-box-b-3">
