--- a/app/components/body-components/signup.html
+++ b/app/components/body-components/signup.html
@@ -2,8 +2,9 @@
   <div class="signup-box-1">
     <h2>Get Involved</h2>
     <!--<h5>-->
-      <small><i>Support</i></small>
+      <!--<small><i>Support</i></small>-->
     <!--</h5>-->
+    <p>Support</p>
     <p>
       There are various ways you can support the museum. Donations are very welcome and are an
       important way we keep this museum open and accessible to the whole community. You can also
