--- a/app/components/heros/sub-page-hero-x-1.html
+++ b/app/components/heros/sub-page-hero-x-1.html
@@ -2,7 +2,8 @@
     <div class="sub-page-hero-x-1">
         <h1>Exhibition</h1>
    <!-- <h5> -->
-      <small><i>Spaces</i></small>
+      <!--<small><i>Spaces</i></small>-->
     <!--</h5>-->
+    <p class="fs-italic">Spaces</p>
     </div>
   </div>
