--- a/app/components/heros/sub-page-hero-x.html
+++ b/app/components/heros/sub-page-hero-x.html
@@ -2,7 +2,8 @@
     <div class="sub-page-hero-x">
         <h1>Special Events and Exhibitions</h1>
     <!--<h5>-->
-      <small><i>News</i></small>
+      <!--<small><i>News</i></small>-->
     <!--</h5>-->
+    <p class="fs-italic">News</p>
     </div>
   </div>
