--- a/app/components/heros/sub-shop-hero-x-3.html
+++ b/app/components/heros/sub-shop-hero-x-3.html
@@ -2,8 +2,11 @@
     <div class="sub-shop-hero-x-3">
         <h1>Shop</h1>
     <!--<h5>-->
-      <small><i>Exit Through the Gift Shop</i></small></br>
-      <small><i>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.</i></small>
+      <!--<small><i>Exit Through the Gift Shop</i></small>-->
+      <p class="fs-italic">Exit Through the Gift Shop</p>
+    </br>
+      <!--<small><i>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.</i></small>-->
+      <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.</p>
     <!--</h5>-->
     </div>
   </div>
