--- a/app/components/sub-pages/aeronautics.html
+++ b/app/components/sub-pages/aeronautics.html
@@ -3,7 +3,8 @@
   <div class="aeronautics-box-2">
     <h2>Visiting Professor of Aeronautics</h2>
     <!--<h5>-->
-      <small><i>News</i></small>
+      <!--<small><i>News</i></small>-->
+      <p class="fs-italic">News</p>
     <!--</h5>-->
     <p>
       It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of
