--- a/app/components/sub-pages/medicine.html
+++ b/app/components/sub-pages/medicine.html
@@ -3,8 +3,9 @@
   <div class="medicine-box-2" id="section-box4">
     <h2>Biology and Medicine</h2>
     <!--<h5>-->
-      <small><i>Spaces</i></small>
+      <!--<small><i>Spaces</i></small>-->
     <!--</h5>-->
+    <p class="fs-italic">Spaces</p>
     <p>
       From micro-organisms to the human body, major breakthroughs in biology are offering us unique
       insights into the great wonders of the tiny world. For many people their life expectancy is
