--- a/app/src/scss/modules/_explore-for-kids.scss
+++ b/app/src/scss/modules/_explore-for-kids.scss
@@ -9,11 +9,8 @@
 .explore-for-kids-box-2 {
   grid-area: explore-for-kids-box-2;
   padding: 50px 30px;
-  text-align: justify;
-  p {
-    font-size: $font--m;
-    font-weight: 100;
-  }
+  //text-align: justify;
+  
   @media #{$screen__l} {
     padding: 50px 80px;
   }
