--- a/app/components/body-components/testimonial.html
+++ b/app/components/body-components/testimonial.html
@@ -2,8 +2,9 @@
   <div class="testimonial">
     <h1>Community Science Museum</h1>
     <!--<h5>-->
-      <small><i>Explore togethe</i></small>
+      <!--<small><i>Explore togethe</i></small>-->
     <!--</h5>-->
+    <p class="fs-italic">Explore togethe</p>
     <p>
       Come join us at the Community Science Museum where we’re committed to making science
       accessible to all. Over the course of human history, science has developed from our early
