--- a/app/components/forms/volunteer-form.html
+++ b/app/components/forms/volunteer-form.html
@@ -2,14 +2,20 @@
   <div class="community-form-grid-container box-container">
     <div class="community-form-box hedder-box-grid-center">
       <h2>Volunteer</h2>
-      <small><i>
+      <!--<small><i>
         A number of people volunteer their time and effort to keep the displays in good order and
         ready for visitors to come and enjoy. Volunteering has its perks including getting to see
         behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch
         where all staff and volunteers come together to discuss ideas for future exhibits and
         strategies for the museum. You can help volunteer in a number of different spheres. Please
         contact us if you’d like to find out more about how you can get involved.
-      </i></small>
+      </i></small>-->
+      <p>A number of people volunteer their time and effort to keep the displays in good order and
+        ready for visitors to come and enjoy. Volunteering has its perks including getting to see
+        behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch
+        where all staff and volunteers come together to discuss ideas for future exhibits and
+        strategies for the museum. You can help volunteer in a number of different spheres. Please
+        contact us if you’d like to find out more about how you can get involved.</p>
     </div>
     <div class="community-form-box-1 box-grid-center">
       <input type="text" name="name" placeholder="Name" />
