--- a/app/components/heros/sub-shop-hero-x-2.html
+++ b/app/components/heros/sub-shop-hero-x-2.html
@@ -2,13 +2,17 @@
   <div class="sub-shop-hero-x-2">
     <h1>Food & drink</h1>
     <!--<h5>-->
-      <small><i>Shop</i></small></br>
-      <small
+      <!--<small><i>Shop</i></small><-->
+      <p class="fs-italic">Shop</p>
+    </br>
+    <p>There is a café attached to the museum where you can get light lunches, soft drinks,
+      coffee, snacks and more.</p>
+      <!--<small
         ><i
           >There is a café attached to the museum where you can get light lunches, soft drinks,
           coffee, snacks and more.</i
         ></small
-      >
+      >-->
     <!--</h5>-->
   </div>
 </div>
