--- a/app/components/sub-pages/ai.html
+++ b/app/components/sub-pages/ai.html
@@ -3,8 +3,9 @@
   <div class="ai-box-2" id="section-box3">
     <h2>Robotics and AI</h2>
     <!--<h5>-->
-      <small><i>Spaces</i></small>
+      <!--<small><i>Spaces</i></small>-->
     <!--</h5>-->
+    <p class="fs-italic">Spaces</p>
     <p>
       The information revolution is here and robotics and artificial intelligence are the science of
       the future. From useful home applications of AI to industrial uses of robotics, the future is
