--- a/app/components/sub-pages/cosmology.html
+++ b/app/components/sub-pages/cosmology.html
@@ -3,8 +3,9 @@
   <div class="cosmology-box-2" id="section-box1">
     <h2>Cosmology</h2>
     <!--<h5>--->
-      <small><i>Spaces</i></small>
+      <!--<small><i>Spaces</i></small>-->
     <!--</h5>-->
+    <p class="fs-italic">Spaces</p>
     <p>
       Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the
       night sky and what we can see and know about the universe around us. We’ll locate the various
