--- a/app/components/sub-pages/ecology.html
+++ b/app/components/sub-pages/ecology.html
@@ -3,8 +3,9 @@
   <div class="ecology-box-2" id="section-box5">
     <h2>Ecology</h2>
     <!--<h5>-->
-      <small><i>Spaces</i></small>
+      <!--<small><i>Spaces</i></small>-->
     <!--</h5>-->
+    <p class="fs-italic">Spaces</p>
     <p>
       As we learn more and more of the impact humans are having on the planet, the more important it
       becomes that scientists explore how to create a sustainable future not just for humans but for
