--- a/app/components/sub-pages/evolution.html
+++ b/app/components/sub-pages/evolution.html
@@ -3,8 +3,9 @@
   <div class="evolution-box-2" id="section-box2">
     <h2>Evolution</h2>
     <!--<h5>-->
-      <small><i>Spaces</i></small>
+      <!--<small><i>Spaces</i></small>-->
     <!--</h5>-->
+    <p class="fs-italic">Spaces</p>
     <p>
       For centuries, philosophers and scientists have wrestled with the question of our origins.
       Where do we come from and how did we get here? Since Darwin proposed his theory of evolution
