--- a/app/components/sub-pages/loan.html
+++ b/app/components/sub-pages/loan.html
@@ -3,8 +3,9 @@
   <div class="loan-box-2">
     <h2>Energetica Exhibition on Loan</h2>
     <!--<h5>-->
-      <small><i>News</i></small>
+      <!--<small><i>News</i></small>-->
     <!--</h5>-->
+    <p class="fs-italic">News</p>
     <p>
       On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the
       Community Science Museum. It’s a series of installations that allow visitors to experience the
