--- a/app/src/scss/modules/_info-box.scss
+++ b/app/src/scss/modules/_info-box.scss
@@ -2,8 +2,8 @@
   grid-template-areas: "bady-box-b-1 body-box-b-2 body-box-b-3";
 }
 .bady-box-b-1,
-.bady-box-b-2,
-.bady-box-b-3 {
+.body-box-b-2,
+.body-box-b-3 {
   margin-bottom: 5px;
 }
 .bady-box-b-1 {
@@ -17,6 +17,7 @@
 .body-box-b-3 {
   grid-area: body-box-b-3;
   box-shadow: 0 0 2em -19px;
+  margin-bottom: 9px;
   iframe{
     border: 0px;
   }
@@ -145,6 +146,8 @@
 .mail-button{
   color: #000;
   background-color: #fff;
-  padding:3px 8px 3px 8px;
+  padding:0px 5px 0px 5px;
   border-radius: 10px;
+  display: flex;
+  justify-content: center;
 }
