--- a/app/src/scss/modules/_mediaq.scss
+++ b/app/src/scss/modules/_mediaq.scss
@@ -11,3 +11,5 @@ $screen__s: "only screen and (min-width: 640px)";
 $screen__m: "only screen and (min-width: 768px)";
 $screen__l: "only screen and (min-width: 1024px)";
 $screen__xl: "only screen and (min-width: 1200px)";
+
+$screen__xxl:"only screen and (min-width: 1920px)";
