--- a/app/src/scss/modules/_help-box.scss
+++ b/app/src/scss/modules/_help-box.scss
@@ -16,4 +16,36 @@
       }
     }
   
+
+    .container {
+      display: block; 
+      @media #{$screen__l} {
+        display: grid;
+      }
+      grid-template-columns: 1fr 0.7fr; 
+      grid-template-rows: 1fr; 
+      gap: 3px 16px; 
+      grid-template-areas: 
+        "about-box contact-box"; 
+    }
+    .contact-box { 
+      grid-area: contact-box; 
+      text-align: center;
+      @media #{$screen__l} {
+        text-align: left;
+      }
+      font-weight: 400;
+      font-size: $font--btxt;
+      i {
+        font-weight: 100;
+      }
+    }
+    .about-box { 
+      grid-area: about-box;
+      text-align: left;
+      a {
+        color: green;
+        font-weight: 400;
+      }
+     }
   
