--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1563,7 +1563,10 @@ input[type=text], select, textarea {
 
 .about-box {
   grid-area: about-box;
-  text-align: left; }
+  text-align: center; }
+  @media only screen and (min-width: 1024px) {
+    .about-box {
+      text-align: left; } }
   .about-box a {
     color: green;
     font-weight: 400; }
